Add initial project rules and configurations for Hummingbot V2 trading infrastructure
- Created documentation for Docker Compose conventions.
- Added guidelines for Hummingbot V2 controller development patterns.
- Established core project context and key rules for the trading infrastructure.
- Defined quantitative strategy review standards and mandatory testing configurations.
- Introduced paper trade configurations for various strategies including PMM Avellaneda V2 and Directional MAX/MIN.
- Implemented threading locks in sentiment engines for thread safety.
- Updated README with paper run matrix instructions.

--- a/hbot/data/bot1/conf/conf_client.yml
+++ b/hbot/data/bot1/conf/conf_client.yml
@@ -134,7 +134,10 @@ tables_format: psql
 
 paper_trade:
   paper_trade_exchanges:
+  - bitget
+  - bitget_perpetual
   - binance
+  - binance_perpetual
   - kucoin
   - kraken
   - gate_io
