Refactor connector names for paper trading configurations
- Updated connector names in multiple YAML configuration files to specify paper trading versions, enhancing clarity and consistency across the trading strategies.
- Adjusted the price retrieval method in the PaperSmokeTestV1Controller to use the updated connector name.

--- a/hbot/data/bot1/conf/controllers/ai_mean_reversion_grid_v1_paper.yml
+++ b/hbot/data/bot1/conf/controllers/ai_mean_reversion_grid_v1_paper.yml
@@ -5,7 +5,7 @@
 controller_name: ai_mean_reversion_grid_v1
 controller_type: directional_trading
 
-connector_name: bitget_perpetual
+connector_name: bitget_perpetual_paper_trade
 trading_pair: BTC-USDT
 total_amount_quote: 60
 leverage: 1
