--- a/hbot/data/bot1/conf/controllers/pmm_rsi_llm_paper.yml
+++ b/hbot/data/bot1/conf/controllers/pmm_rsi_llm_paper.yml
@@ -9,7 +9,7 @@ controller_name: pmm_rsi_llm
 controller_type: market_making
 
 # ---- Exchange ----
-connector_name: bitget_perpetual
+connector_name: bitget_perpetual_paper_trade
 trading_pair: BTC-USDT
 
 # ---- Capital (micro: $10 for testing) ----
