--- a/hbot/env/.env.template
+++ b/hbot/env/.env.template
@@ -29,6 +29,13 @@ BOT2_BITGET_API_SECRET=your_bitget_api_secret_here
 BOT2_BITGET_PASSPHRASE=your_bitget_passphrase_here
 BOT2_PASSWORD=admin456changeme
 
+# ---- EPP v2.4 toggles ----
+EPP_PHASE=0
+EPP_PAPER_MODE=true
+EPP_CONNECTOR_SPOT=bitget
+EPP_CONNECTOR_PERP_MONITOR=bitget_perpetual
+EPP_TRADING_PAIR=BTC-USDT
+
 # ---- Grafana ----
 GF_ADMIN_USER=admin
 GF_ADMIN_PASSWORD=GrafanaSecure2024!
