--- a/hbot/env/.env.template
+++ b/hbot/env/.env.template
@@ -36,6 +36,33 @@ EPP_CONNECTOR_SPOT=bitget
 EPP_CONNECTOR_PERP_MONITOR=bitget_perpetual
 EPP_TRADING_PAIR=BTC-USDT
 
+# ---- External Signal/Risk Stack ----
+EXT_SIGNAL_RISK_ENABLED=false
+BUS_SOFT_PAUSE_ON_OUTAGE=true
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
+REDIS_BIND_IP=127.0.0.1
+REDIS_CONSUMER_GROUP=hb_group_v1
+EVENT_POLL_MS=1000
+RISK_MAX_ABS_SIGNAL=0.25
+RISK_MAX_ABS_PREDICTED_RETURN=0.05
+
+# ---- ML Signal Runtime (Phase 1 MVP) ----
+ML_ENABLED=false
+ML_RUNTIME=sklearn_joblib
+ML_MODEL_SOURCE=local
+ML_MODEL_URI=/workspace/hbot/models/current/model.joblib
+ML_MODEL_REFRESH_SEC=300
+ML_CONFIDENCE_MIN=0.60
+ML_MAX_SIGNAL_AGE_MS=3000
+ML_INFERENCE_TIMEOUT_MS=200
+ML_HORIZON_S=60
+ML_FEATURE_SET=v1
+ML_CUSTOM_CLASS_PATH=
+ML_S3_HTTP_TIMEOUT_SEC=10
+
 # ---- Grafana ----
 GF_ADMIN_USER=admin
 GF_ADMIN_PASSWORD=GrafanaSecure2024!
