--- a/hbot/data/bot1/conf/controllers/epp_v2_4_bot_a.yml
+++ b/hbot/data/bot1/conf/controllers/epp_v2_4_bot_a.yml
@@ -1,16 +1,19 @@
 # EPP v2.4 - Phase 0 - Bot A (ACTIVE TRADING)
+id: epp_v2_4_bot_a
 controller_name: epp_v2_4
 controller_type: market_making
 
-# Paper-test mode:
-# Keep connector_name as the real connector id and rely on conf_client.yml
-# paper_trade.paper_trade_exchanges to route orders to paper trading.
+# Paper mode uses the real connector for market data only.
+# The controller's paper_mode: true handles simulation internally.
+# To go live: set paper_mode: false (connector_name stays bitget).
 connector_name: bitget
 trading_pair: BTC-USDT
 
 total_amount_quote: 50
 buy_spreads: "0.0020,0.0030"
 sell_spreads: "0.0020,0.0030"
+buy_amounts_pct: "50,50"
+sell_amounts_pct: "50,50"
 executor_refresh_time: 90
 cooldown_time: 5
 leverage: 1
