Enhance EPP v2.4 controller for paper trading support and refactor configurations
- Implemented a patch in the MarketDataProvider to support paper trading connectors by stripping the "_paper_trade" suffix.
- Updated EppV24Config and EppV24Controller to remove deprecated paper mode settings and introduced a minimum net edge parameter.
- Refactored OpsGuard to track operational pause cycles instead of soft pause cycles for better state management.
- Adjusted YAML configuration files to specify paper trading connectors and added new parameters for trading strategies.
- Improved logging for better traceability of paper trading operations.

--- a/hbot/data/bot1/conf/controllers/epp_v2_4_bot_c_stub.yml
+++ b/hbot/data/bot1/conf/controllers/epp_v2_4_bot_c_stub.yml
@@ -9,6 +9,8 @@ trading_pair: BTC-USDT
 total_amount_quote: 0
 buy_spreads: ""
 sell_spreads: ""
+buy_amounts_pct: "50,50"
+sell_amounts_pct: "50,50"
 executor_refresh_time: 120
 cooldown_time: 5
 leverage: 1
@@ -16,10 +18,10 @@ position_mode: ONEWAY
 stop_loss: 0.005
 take_profit: 0.005
 time_limit: 900
+skip_rebalance: true
 
 variant: c
 enabled: false
 no_trade: true
 instance_name: bot1
-paper_mode: true
 log_dir: /home/hummingbot/logs
