--- a/hbot/data/bot1/conf/controllers/epp_v2_4_bot_a.yml
+++ b/hbot/data/bot1/conf/controllers/epp_v2_4_bot_a.yml
@@ -3,10 +3,8 @@ id: epp_v2_4_bot_a
 controller_name: epp_v2_4
 controller_type: market_making
 
-# Paper mode uses the real connector for market data only.
-# The controller's paper_mode: true handles simulation internally.
-# To go live: set paper_mode: false (connector_name stays bitget).
-connector_name: bitget
+# Paper: use bitget_paper_trade.  Live: change to bitget.
+connector_name: bitget_paper_trade
 trading_pair: BTC-USDT
 
 total_amount_quote: 50
@@ -22,23 +20,21 @@ stop_loss: 0.005
 take_profit: 0.005
 time_limit: 900
 take_profit_order_type: LIMIT
+skip_rebalance: true
 
 variant: a
 enabled: true
 no_trade: false
 instance_name: bot1
-paper_mode: true
 log_dir: /home/hummingbot/logs
 
-# VIP0 model (Binance spot VIP0)
+# VIP0 fee model
 spot_fee_pct: 0.0010
 slippage_est_pct: 0.0005
 turnover_cap_x: 3.0
 turnover_penalty_step: 0.0005
+min_net_edge_bps: 2
 
 sample_interval_s: 10
 spread_floor_recalc_s: 300
 cancel_budget_per_min: 50
-max_age_neutral_s: 90
-max_age_trend_s: 60
-max_age_high_vol_s: 40
