--- a/hbot/compose/docker-compose.yml
+++ b/hbot/compose/docker-compose.yml
@@ -24,6 +24,8 @@ volumes:
     driver: local
   grafana-data:
     driver: local
+  loki-data:
+    driver: local
 
 # ---- Logging anchor ----
 x-logging: &default-logging
@@ -67,6 +69,9 @@ services:
       - ../controllers/price_buffer.py:/home/hummingbot/controllers/price_buffer.py:ro
       - ../controllers/ops_guard.py:/home/hummingbot/controllers/ops_guard.py:ro
       - ../controllers/epp_logging.py:/home/hummingbot/controllers/epp_logging.py:ro
+      - ../controllers/paper_engine.py:/home/hummingbot/controllers/paper_engine.py:ro
+      - ../controllers/fee_resolver.py:/home/hummingbot/controllers/fee_resolver.py:ro
+      - ../config:/home/hummingbot/project_config:ro
       - ../services:/home/hummingbot/services:ro
     environment:
       - TZ=${TZ:-UTC}
@@ -100,6 +105,9 @@ services:
       - ../controllers/price_buffer.py:/home/hummingbot/controllers/price_buffer.py:ro
       - ../controllers/ops_guard.py:/home/hummingbot/controllers/ops_guard.py:ro
       - ../controllers/epp_logging.py:/home/hummingbot/controllers/epp_logging.py:ro
+      - ../controllers/paper_engine.py:/home/hummingbot/controllers/paper_engine.py:ro
+      - ../controllers/fee_resolver.py:/home/hummingbot/controllers/fee_resolver.py:ro
+      - ../config:/home/hummingbot/project_config:ro
       - ../services:/home/hummingbot/services:ro
     environment:
       - TZ=${TZ:-UTC}
@@ -268,6 +276,36 @@ services:
   # Monitoring Stack
   # ==========================================
 
+  # ---- Bot KPI Exporter ----
+  bot-metrics-exporter:
+    image: python:3.11-slim
+    container_name: hbot-bot-metrics-exporter
+    restart: unless-stopped
+    logging: *default-logging
+    command: >
+      /bin/sh -lc "python /workspace/hbot/services/monitoring/bot_metrics_exporter.py"
+    environment:
+      - PYTHONPATH=/workspace/hbot
+      - HB_DATA_ROOT=/workspace/hbot/data
+      - METRICS_PORT=9400
+      - METRICS_PATH=/metrics
+      - EXPORTER_LOG_TAIL_LINES=200
+    volumes:
+      - ..:/workspace/hbot:ro
+    networks:
+      - monitoring
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:9400/metrics')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+          cpus: "0.25"
+
   # ---- Prometheus ----
   prometheus:
     image: prom/prometheus:v2.51.2
@@ -327,6 +365,8 @@ services:
       - monitoring
     depends_on:
       prometheus:
+        condition: service_healthy
+      loki:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/api/health"]
@@ -401,6 +441,53 @@ services:
           memory: 256M
           cpus: "0.5"
 
+  # ---- Loki ----
+  loki:
+    image: grafana/loki:2.9.8
+    container_name: hbot-loki
+    restart: unless-stopped
+    logging: *default-logging
+    command: ["-config.file=/etc/loki/loki-config.yml"]
+    volumes:
+      - ../monitoring/loki/loki-config.yml:/etc/loki/loki-config.yml:ro
+      - loki-data:/loki
+    ports:
+      - "${MONITORING_BIND_IP:-127.0.0.1}:3100:3100"
+    networks:
+      - monitoring
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3100/ready"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 15s
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+          cpus: "0.25"
+
+  # ---- Promtail ----
+  promtail:
+    image: grafana/promtail:2.9.8
+    container_name: hbot-promtail
+    restart: unless-stopped
+    logging: *default-logging
+    command: ["-config.file=/etc/promtail/promtail-config.yml"]
+    volumes:
+      - ../monitoring/promtail/promtail-config.yml:/etc/promtail/promtail-config.yml:ro
+      - ../data:/workspace/hbot/data:ro
+    networks:
+      - monitoring
+    depends_on:
+      loki:
+        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+          cpus: "0.2"
+
   # ---- Alertmanager (optional, activate with profile) ----
   alertmanager:
     image: prom/alertmanager:v0.27.0
@@ -423,3 +510,6 @@ services:
         limits:
           memory: 64M
           cpus: "0.1"
+
+
+
