--- a/hbot/data/bot1/conf/controllers/epp_v2_4_bot_a.yml
+++ b/hbot/data/bot1/conf/controllers/epp_v2_4_bot_a.yml
@@ -29,6 +29,9 @@ instance_name: bot1
 log_dir: /home/hummingbot/logs
 
 # VIP0 fee model
+fee_mode: auto
+fee_profile: vip0
+require_fee_resolution: true
 spot_fee_pct: 0.0010
 slippage_est_pct: 0.0005
 turnover_cap_x: 3.0
@@ -38,3 +41,11 @@ min_net_edge_bps: 2
 sample_interval_s: 10
 spread_floor_recalc_s: 300
 cancel_budget_per_min: 50
+internal_paper_enabled: true
+paper_seed: 7
+paper_latency_ms: 150
+paper_queue_participation: 0.35
+paper_slippage_bps: 1.0
+paper_adverse_selection_bps: 1.5
+paper_partial_fill_min_ratio: 0.15
+paper_partial_fill_max_ratio: 0.85
