--- a/hbot/monitoring/grafana/provisioning/datasources/datasource.yml
+++ b/hbot/monitoring/grafana/provisioning/datasources/datasource.yml
@@ -1,4 +1,4 @@
-# ============================================
+﻿# ============================================
 # Grafana Datasource Provisioning
 # ============================================
 
@@ -6,6 +6,7 @@ apiVersion: 1
 
 datasources:
   - name: Prometheus
+    uid: prometheus
     type: prometheus
     access: proxy
     url: http://prometheus:9090
@@ -14,3 +15,10 @@ datasources:
     jsonData:
       timeInterval: "15s"
       httpMethod: POST
+
+  - name: Loki
+    uid: loki
+    type: loki
+    access: proxy
+    url: http://loki:3100
+    editable: false
