fix: correct derisk direction + tighten close-out spreads for perp shorts
Three interrelated bugs caused bot1 to get stuck in soft_pause for 12+ hours
with a large unrealized short position that could not be closed:

1. Derisk direction: base_pct_above_max always placed sell-only orders, but
   for a net-short position the bot needs to buy to reduce gross exposure.
   Fix: branch on base_pct_net sign to pick the correct closing side.

2. Derisk spread too wide: 25-35 bps spread placed buy orders far below mid,
   which never fill when price is rising. Added derisk_spread_pct (3 bps
   default) so close-out orders sit near mid and fill within one executor cycle.

3. Config: one-sided regime specs (buy_only/sell_only) accumulated runaway
   directional exposure on a delta-neutral perp strategy. Switched to two-sided
   with target_base_pct=0.0 via regime_specs_override, and tightened
   max_base_pct from 0.90 to 0.60 so derisk triggers earlier.

Result: bot1 recovered in 3 minutes, equity 494->499 USDT, today realized PnL
improved from -5.32 to -0.38 USDT.

Made-with: Cursor

--- a/hbot/data/bot1/conf/controllers/epp_v2_4_bot_a.yml
+++ b/hbot/data/bot1/conf/controllers/epp_v2_4_bot_a.yml
@@ -57,11 +57,18 @@ edge_gate_ewma_period: 8
 # Cap concurrent executors to avoid runaway churn / memory growth.
 max_active_executors: 30
 
+# ── Derisk spread ───────────────────────────────────────────────────
+# During derisk-only mode, place close-out orders this close to mid
+# so they fill quickly without chasing a large adverse move.
+derisk_spread_pct: 0.0003
+
 # ── Perp inventory ────────────────────────────────────────────────
 # Delta-neutral: target net exposure = 0 for balanced MM
 perp_target_net_base_pct: 0.0
 min_base_pct: 0.0
-max_base_pct: 0.90
+# Lower derisk trigger from 0.90 → 0.60 so position is capped earlier
+# and the derisk cycle completes before large adverse moves.
+max_base_pct: 0.60
 
 # ── Drift protection ──────────────────────────────────────────────
 adverse_drift_ewma_alpha: 0.25
@@ -85,3 +92,21 @@ paper_adverse_selection_bps: 1.5
 paper_partial_fill_min_ratio: 0.15
 paper_partial_fill_max_ratio: 0.85
 paper_max_fills_per_order: 8
+
+# ── Regime overrides ────────────────────────────────────────────────
+# For delta-neutral perp MM: remove one-sided extremes in up/down
+# so the bot quotes two-sided with inventory skew instead of
+# accumulating pure directional exposure.
+regime_specs_override:
+  up:
+    one_sided: "off"
+    spread_min: "0.0030"
+    spread_max: "0.0060"
+    target_base_pct: "0.0"
+  down:
+    one_sided: "off"
+    spread_min: "0.0030"
+    spread_max: "0.0060"
+    target_base_pct: "0.0"
+  neutral_low_vol:
+    target_base_pct: "0.0"
